# accountingmvp

accountingmvp/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accountingmvp/dashboard/: app.py
accountingmvp/docs/adr/: 001-parser-strategy.md  002-matching-algorithm.md
accountingmvp/src/: config.py  logger.py
accountingmvp/src/models/: __init__.py  enums.py  match.py  transaction.py
accountingmvp/src/normalizer/: __init__.py  pipeline.py  validators.py
accountingmvp/src/parsers/: __init__.py  bank_csv.py  base.py  ecocash.py  factory.py  sanitizer.py  zipit.py
accountingmvp/src/reconciliation/: __init__.py  engine.py  reporter.py  scorer.py
accountingmvp/src/reconciliation/matchers/: __init__.py  amount.py  date.py  fuzzy_text.py
accountingmvp/src/utils/: exceptions.py
accountingmvp/tests/: conftest.py
accountingmvp/tests/fixtures/: bank_sample.csv  ecocash_sample.csv
accountingmvp/tests/integration/: test_reconciliation_pipeline.py
accountingmvp/tests/unit/: test_ecocash_parser.py  test_exceptions.py  test_factory.py  test_matchers.py  test_normalizer.py  test_parsers.py  test_reporter.py  test_zipit_parser.py
