[project]
name = "payment-reconciliation"
version = "0.1.0"
description = "Production-grade payment reconciliation system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "streamlit>=1.28.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rapidfuzz>=3.5.0",
    "python-dateutil>=2.8.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
